# cosmos-packed-kv

./: .gitignore  ARCHITECTURE.md  README.md  pyproject.toml
.github/workflows/: python-build-and-test.yml
benchmarks/: README.md  bulk_benchmark.py  latency_diagnostic.py
examples/: python_basic_crud.py
src/packed_kv_cosmos/: __init__.py  client.py  config.py  hashing.py  model.py  packed_container.py  packing.py  results.py  storage.py
tests/integration/: conftest.py  test_bulk_live.py  test_live_cosmos_smoke.py  test_proxy_comprehensive.py  test_proxy_live_smoke.py
tests/unit/: test_client_bulk_put.py  test_client_crud_basic.py  test_client_delete_missing.py  test_contention_delete_vs_put.py  test_contention_two_keys_same_bucket.py  test_hashing.py  test_hashing_pk_routing.py  test_model_serialization.py  test_overflow_pages_bounded_scan.py  test_overflow_pages_delete.py  test_overflow_pages_put_get.py  test_packing_config.py  test_proxy_bulk_upsert.py  test_proxy_crud_basic.py  test_proxy_errors.py  test_proxy_overflow.py  test_proxy_query.py  test_proxy_read_all.py  test_value_encoding.py
tests/unit/fakes/: fake_container_proxy.py  fake_storage.py
